--- a/css/utilities.css
+++ b/css/utilities.css
@@ -119,6 +119,10 @@
   font-size: 40px;
 }
 
+.section-padding {
+  padding: 10px 20px 0px;
+}
+
 /* flex-grid */
 .flex-grid {
   padding-bottom: 0px;
